# AIvy_solver

./: .gitignore  README.md  pyproject.toml
aivy_solver/: __main__.py  config.py  ivy_checker.py  llm_client.py  problem.py  prompts.py  results.py  runner.py
benchmarks/decentralized_lock/: ground_truth.ivy  stripped.ivy
benchmarks/distai_blockchain/: ground_truth.ivy  stripped.ivy
benchmarks/distai_ricart_agrawala/: ground_truth.ivy  stripped.ivy
benchmarks/ex_decentralized_lock/: ground_truth.ivy  stripped.ivy
benchmarks/ex_decentralized_lock_abstract/: ground_truth.ivy  stripped.ivy
benchmarks/ex_distributed_lock_abstract/: ground_truth.ivy  stripped.ivy
benchmarks/ex_distributed_lock_maxheld/: ground_truth.ivy  stripped.ivy
benchmarks/ex_lockserv_automaton/: ground_truth.ivy  stripped.ivy
benchmarks/ex_majorityset_leader_election/: ground_truth.ivy  stripped.ivy
benchmarks/ex_naive_consensus/: ground_truth.ivy  stripped.ivy
benchmarks/ex_quorum_leader_election/: ground_truth.ivy  stripped.ivy
benchmarks/ex_ring/: stripped.ivy
benchmarks/ex_ring_id_not_dead_limited/: ground_truth.ivy  stripped.ivy
benchmarks/ex_ring_not_dead/: ground_truth.ivy  stripped.ivy
benchmarks/ex_simple_decentralized_lock/: ground_truth.ivy  stripped.ivy
benchmarks/ex_simple_election/: ground_truth.ivy  stripped.ivy
benchmarks/ex_toy_consensus/: ground_truth.ivy  stripped.ivy
benchmarks/i4_chord_ring_maintenance/: ground_truth.ivy  stripped.ivy
benchmarks/i4_database_chain_replication/: ground_truth.ivy  (+1 more)
scripts/: build_benchmarks_from_ivybench.py
(+72 files in other folders)
